Add root README.md and fix .gitignore
Changes:
- Add comprehensive Japanese README.md with:
  - Project overview and features
  - Architecture diagram
  - Quick start guide (Docker, backend, frontend)
  - API endpoints documentation
  - Troubleshooting section
  - Technology stack and project status

- Fix .gitignore to track lock files:
  - Comment out package-lock.json exclusion
  - Comment out yarn.lock exclusion
  - Comment out pnpm-lock.yaml exclusion
  - Enables reproducible builds across environments

- Add frontend/package-lock.json for dependency locking

Resolves priority 1 and 2 items from project review

--- a/.gitignore
+++ b/.gitignore
@@ -53,9 +53,10 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 pnpm-debug.log*
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
+# Lock files should be committed for reproducible builds
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
 
 # JavaScript build outputs
 dist/
